--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "mode": "desktop",
+  "mode": "web_debug",
   "react_url": "http://localhost:3000",
   "build_path": "./frontend/build/index.html",
   "webchannel_port": 12345
