--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,4 @@
 # URL for QWebChannel WebSocket connection when running in web_debug mode
+# Either variable will be read by bridgeApi.ts
 REACT_APP_WEBCHANNEL_URL=ws://localhost:12345
+REACT_APP_QT_WEBSOCKET_URL=
